# kekule_engine

./: CMakeLists.txt  readme.md
src/: main.cpp
src/graphics/: CMakeLists.txt  buffer_objects.cpp  buffer_objects.h  camera.cpp  camera.h  graphics.cpp  graphics.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/graphics/shaders/: simple.frag  simple.vert
src/maths/: CMakeLists.txt  kmath.h  mat4.h  mat4.hpp  vec2.h  vec2.hpp  vec3.h  vec3.hpp  vec4.h  vec4.hpp
src/window/: CMakeLists.txt  input.cpp  input.h  logging.cpp  logging.h  utils.h  window.cpp  window.h
